Fixed bug with autocomplete suggestions
Some autocomplete suggestions not showing up when the button "duplicate
query" is pressed, when there are some filters present on the form

--- a/sana.mds-master/src/mds/dora/static/css/stylesheet.css
+++ b/sana.mds-master/src/mds/dora/static/css/stylesheet.css
@@ -223,7 +223,7 @@ ul{
 .filters {
   cursor: default;
   white-space: normal;
-  width: 400px;
+  //width: 400px;
   position: relative;
 }
 
